--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@schedule-x/calendar": "^3.6.0",
+    "@schedule-x/events-service": "^3.6.0",
+    "@schedule-x/react": "^3.5.0",
+    "@schedule-x/theme-default": "^3.6.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0",
+    "temporal-polyfill": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
